force-app/main/default/objects/NAS_Integration_Error__c/NAS_Integration_Error__c.object-meta.xml
<CustomObject>
    <description>Stores handled Integration error messages occurred during custom code developed in North America Services</description>
    <label>NAS Integration Error</label>
    <nameField>
        <displayFormat>Err-{0000}</displayFormat>
        <label>NAS Integration Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NAS Integration Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>