force-app/main/default/objects/NAS_Integration_Error__c/fields/NAS_Apex_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>NAS_Apex_Class_Name__c</fullName>
    <description>Stores the apex class name where the error occurred</description>
    <label>Apex Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>