force-app/main/default/objects/NAS_Integration_Error__c/fields/NAS_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>NAS_Error_Message__c</fullName>
    <description>Stores the stack trace of the error</description>
    <label>Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>