force-app/main/default/objects/NAS_Integration_Error__c/fields/NAS_Request_Data__c.field-meta.xml
<CustomField>
    <fullName>NAS_Request_Data__c</fullName>
    <description>Stores the target data dump that was being processed by the Apex Class</description>
    <label>Request Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>