force-app/main/default/objects/NAS_Integration_Error__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NAS_Apex_Class_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NAS_Error_Message__c</columns>
    <columns>NAS_Request_Data__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>